--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,305 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  margin: 0px;
+  padding:0px;
+  box-sizing: border-box;
+}
+/* site heading */
+.rotate{
+  display: inline-block;
+  width:5vw;
+  height: 2vh;
+  transform:rotate(270deg);
+  margin-bottom: 20px;
+}
+.siren{
+  display:inline-block;
+  width:5vw;
+  height: 3vh;
+  margin-top: 10px;
+  margin-left:0px;
+  
+}
+.site-text{
+  position: absolute;
+  left:50%;
+}
+.site-name{
+  /* border: 3px solid red; */
+  position: relative;
+  height:10vh;
+}
+/* site heading */
+
+/* site nav */
+.nav{
+  border: 5px solid black;
+  width:100vw;
+  background-color: blue;
+  font-size: 20vw;
+  }
+  .nav2{
+    /* border:3px solid green; */
+    width:90vw;
+  }
+  
+  .Link{
+    font-size:4vw;
+    color:black;
+    font-weight: bold;
+    text-decoration: none;
+  
+  }
+  .link-cont{
+    /* border :5px dotted greenyellow; */
+    height:10vh;
+    width:100vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  .Link:hover{
+    color:rgb(238,174,202);
+    border-radius: 5px;
+  } 
+  /* nav end */
+
+/* main container */
+.main-container{
+  display: flex;
+ justify-content:space-around;
+ margin-top: 10px;
+ /* border :10 px solid red; */
+} 
+
+/* main container */
+
+/* child container 1*/
+.container1{
+  /* background-color:pink;  */
+  width:700px;
+  /* height:230px; */
+  position: relative;
+  margin-bottom: 10px;
+  border-bottom: 3px;
+  border-color:grey;
+  border-bottom-style: solid;
+}
+/* child container 1*/
+.cont-img1{
+  width:265px;
+  height:165px;
+  /* border: 3px solid black; */
+}
+.imgData{
+  width:265px;
+  height:165px;
+
+}
+/* heading */
+.heading1{
+  font-weight: bold;
+  position: absolute;
+  top:0px;
+  left:40%;
+  width:200px;
+  text-align: start
+}
+/* description */
+.des1{
+  width:150px;
+  /* height:70px; */
+  background-color: red;
+   position: absolute; 
+  /* bottom:50%; */
+  left:40%;
+  top:43px;
+  font-size:small;
+}
+.date1{
+  position: relative;
+  left: 40%;
+  bottom:30px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* ///////////////////////////////////////// */
+.hr{
+  width:100vw;
+  background-color: #dadadd;
 }
+.hr1{
+  width:6vw;
+  height:2px;
+  background-color:red;
+  display: inline-block;
+}
+/*bolly data */
+/* img cont */
+/* Top lar */
+/* top post left img */
+.topleft{
+  border:3 px solid red;
+}
+/* child container 2*/
+.container2{
+  /* border:10px solid  blue; */
+  width:300px;
+  height:250px;
+  position: relative;
+  margin-bottom: 10px;
+  border-bottom: 3px;
+  border-color:grey;
+  border-bottom-style: solid;
+}
+/* child container 2*/
+ #heading2{
+  position:absolute;
+  left:10px;
+} 
+.cont-img2{
+  width:300px;
+  height:190px;
+  /* border: 3px solid black; */
+}
+.img2{
+  width:300px;
+  height:190px;
+
+}
+
+/* child container 3*/
+.container3{
+  /* background-color:pink;  */
+  width:300px;
+  /* height:230px; */
+  position: relative;
+  margin-bottom: 10px;
+  border-bottom: 3px;
+  border-color:grey;
+  border-bottom-style: solid;
+}
+/* child container 3*/
+.cont-img3{
+  width:130px;
+  height:90x;
+  /* border: 3px solid black; */
+}
+.img3{
+  width:130px;
+  height:90px;
+
+}
+/* heading */
+.heading3{
+  font-weight: bold;
+  position: absolute;
+  top:0px;
+  left:40%;
+  width:200px;
+  text-align: start
+}
+/* description */
+.des3{
+  width:300px;
+  /* height:70px; */
+  background-color: red;
+   position: absolute; 
+  /* bottom:50%; */
+  left:40%;
+  top:43px;
+  font-size:small;
+}
+.date3{
+  position: relative;
+  left: 40%;
+  bottom:30px;
+}
+/* ///////////////////////////////// */
+.Add{
+  display: flex;
+  align-items: center;
+  justify-content:center; 
+  border :2px solid black;
+  height:500px;
+}
+.number2{
+  position:absolute;
+  left:20%;
+  border:2px solid red;
+  color: rgb(165, 165, 165);
+  font-weight: bolder;
+  font-size:50px;
+  width: 50px;
+  text-align: center;
+  padding-top: 5px;
+  height: 50px;
+  display: inline-block;
+}
+
+/* /////////////// Home Frontimg*/
+.frontimg{
+  border: 2px solid black; 
+  display: flex;
+  align-items: center;justify-content: center;
+}
+.HomeImg{
+  display: flex;
+  /* border: 3px solid red; */
+  align-items: center;
+  justify-content: center;
+
+}
+.img1{
+  width:500px;
+  height:312px;
+  margin-right: 10px;
+
+}
+.img2{
+  width:180px;
+  height:155px;
+  margin-bottom: 10px;
+} 
+.img3{
+  width:180px;
+  height:155px;
+} 
+/* home latest  main class*/
+.HomeLatest{
+  border:4px solid blueviolet;
+  position: relative;
+}
+.latestH{
+  /* position: absolute;
+  left :30%;
+  border:2px solid blue; */
+  width: 200px;
+  margin-left:22%;
+}
+.latestP{
+  display: flex;
+  justify-content:center;
+  border:2px solid green;
+}
+.latestP1{
+  border: 2px solid blue;
+  margin-right:8px;
+  width:300px;
+  height: 200px;
+}
+.latestimg{
+  width: 300px;
+  height: 150px;
+}
+/* latest Article */
+.lArticle{
+  border: 3px solid black;
+
+}
+.articleP{
+  display: flex;
+  justify-content:space-around;
+}
+
+
+
