--- a/src/component/Footer.css
+++ b/src/component/Footer.css
@@ -1,14 +1,19 @@
 .footer{
-    background-color:rgb(201, 190, 190);
+    background-color:whitesmoke;
     color:grey;
     width:100%;
     height:200px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content:space-between;
+    padding:10px;
+    box-shadow: inset;
+    /* position: fixed;
+    bottom: 0px; */
   }
   .section{
-    width:200px;
-    /* border: 5px solid white; */
+    width:300px;
+    /* border: 5px solid red; */
+    background-color:whitesmoke;
   }
   .flink {
     display: flex;
@@ -19,7 +24,7 @@
   }
   .flinks{
     text-decoration: none;
-    margin-top: 10px;
+    margin-top:5px; 
     color: rgb(125, 118, 118);
   }
   .flinks:hover{
@@ -31,9 +36,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-top:5px; 
   }
   .soclinks{
     text-decoration: none;
+    margin-top:5px; 
   }
   .soclinks:hover{
    background-color: black;
@@ -76,6 +83,13 @@
     display:flex;
     align-items: center;
     justify-content:flex-start
+  }
+  .homewrite{
+    display:flex;
+    align-items: center;
+    justify-content:first baseline;
+    margin-top: 5px;
+
   }
   
   
