--- a/src/component/Content.css
+++ b/src/component/Content.css
@@ -1,29 +1,39 @@
 .dynamicData{
-    border: 10px solid red;
+    border: 10px solid blue;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-/* .Dimgbox{
-    width: 300px;
-    height:200px;
-} */
-.Dimg{
-    width:300px;
-    height: 200px;
+.parentD1{
+    border: 4px solid green;
+    width:600px;
+    height:400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:start
 }
+.Dimgbox{
+    width: 600px;
+    height:400px;
+    border:3px solid red;
+} 
+.Dimg{
+    width:600px;
+    height: 300px;
+    border: 5px solid black;
+} 
 .user{
-    border:1px solid red;
-    display :flex;
-     width:400px;
-    height: 50px;
+    border:1px solid black;
+    width:600px;
+    height: 30px;
    
 }
 .userImg{
 
     background-color:grey;
-    width:50px;
-    height: 50px;
+    width:30px;
+    height: 30px;
     border-radius: 50%;
 }
 .icon{
