--- a/src/component/Content.css
+++ b/src/component/Content.css
@@ -1,43 +1,155 @@
-.dynamicData{
-    border: 10px solid blue;
+ .dynamicData1{
+    /* border: 10px solid blue; */
     display: flex;
     align-items: center;
-    justify-content: center;
-}
+    justify-content:center;
+} 
 .parentD1{
-    border: 4px solid green;
-    width:600px;
-    height:400px;
+    /* border: 4px solid green; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:start
+    justify-content:start;
+    width:500px;
+    padding: 2px;
 }
 .Dimgbox{
-    width: 600px;
-    height:400px;
-    border:3px solid red;
+    width:500px;
+    height:350px;
+    /* border:3px solid red; */
+    margin-top: 0.5rem;
 } 
 .Dimg{
-    width:600px;
-    height: 300px;
-    border: 5px solid black;
+    width:500px;
+     height:350px;
+     border-radius:5%;
+   /* border: 5px solid black; */
 } 
+.Ddesc1{
+    text-align: center;
+    width:500px;
+    height: 300px;
+    padding-top:10px;
+    font-weight: bolder;
+    font-style: italic;
+}
 .user{
-    border:1px solid black;
-    width:600px;
-    height: 30px;
+    /* border:1px solid black; */
+    /* width:600px; */
+    height:50px;
+    display: flex;
+    align-items:center;
+    justify-content:center;
    
 }
+
 .userImg{
 
-    background-color:grey;
-    width:30px;
-    height: 30px;
+    /* background-color:gre bordy; */
+    margin-right: 0.5rem;
+    width:55px;
+    height: 55px;
     border-radius: 50%;
 }
+.userP{
+    /* border:3px solid red; */
+    width:500px;
+    margin-top: 0.3rem;
+    margin-bottom: 0.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+/* social media icon */
+
 .icon{
     width:30px;
     height: 30px;
+    padding: 3px;
+
+}
+
+.section2{
+    background-color:whitesmoke;
+
+}
+.dynamicData2{
+    /* border: 10px solid blue; */
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    z-index:3;
+} 
+.moreFrom{
+    border-bottom: 3px;
+    border-color: aliceblue;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 5px;
+}
+.parentD2{
+    /* border: 4px solid green; */
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:start */
+}
+.Dimgbox2{
+    width: 320px;
+    height:250px;
+    /* border:3px solid red; */
+} 
+.Dimg2{
+    width:320px;
+    height:250px;
+    border-radius: 10%;
+    padding:2px;
+    /* border: 5px solid black; */
+} 
+.Dhea2{
+    text-align: center;
+    width:300px;
+    padding-top:10px;
+    /* border:2px solid black; */
+}
+.user2{
+    /* border:1px solid black; */
+    width:200px;
+    height:50px;
+
+    display: flex;
+    align-items:center;
+    justify-content:start;
+    margin-top: 2px;
+    padding: 4px;
+}
+/* middle */
+.middle-child{
+ /* background-color: rebeccapurple; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+.border-child{
+    /* background-color: black; */
+    width:500px;
+    border-bottom: 3px whitesmoke solid;
+    border-top: 3px solid whitesmoke;
+    padding:10px;
+
+}
+/* likesharew section */
+.lsParent{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border:4px solid rgb(20, 14, 25); */
+    position:fixed;
+    top:25%;
+    left:35px;
+    z-index: +2;
+}
+.likeshare{
 
 }
