--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 /* main container */
 .main-container{
   display: flex;
+  align-items: center;
+  flex-direction: column;
  justify-content:space-around;
  margin-top: 10px;
- /* border :10 px solid red; */
+  border :10 px solid red;  
 } 
+.parent1{
+  border: 3px solid black;
+
+
+}
+.parent2{
+  border: 3px solid brown;
+}
 
 /* main container */
 
@@ -21,13 +31,14 @@
 }
 /* child container 1*/
 .cont-img1{
-  width:265px;
-  height:165px;
+  width:250px;
+  height:160px;
   /* border: 3px solid black; */
 }
 .imgData{
   width:265px;
   height:165px;
+  border-radius: 5px;
 
 }
 /* heading */
@@ -72,65 +83,85 @@
 /* Top lar */
 /* top post left img */
 .topleft{
-  border:3 px solid red;
+  /* border:3 px solid red; */
 }
-/* child container 2*/
+/* child container 2 for big img*/
 .container2{
-  /* border:10px solid  blue; */
+  border:1px solid  blue; 
   width:300px;
   height:250px;
   position: relative;
   margin-bottom: 10px;
   border-bottom: 3px;
   /* border-color:grey; */
-  border-bottom-style: solid;
+  border-bottom:2px solid grey;
 }
 /* child container 2*/
  #heading2{
   position:absolute;
-  left:10px;
+  left:20px;
+  border:2px solid red;
 } 
 .cont-img2{
-  width:400px;
+  width:100%;
   height:200px;
-  /* border: 3px solid black; */
+  /* border: 3px solid black;  */
+   
 }
-.img2{
-  width:400px;
+.leftImg{
+  width:100%;
   height:200px;
+  /* border: 3px solid red; */
+  border-radius: 5px;
 
 }
-
+.number1{
+position:absolute;
+  right:0px;
+  border:2px solid red;
+  color: rgb(165, 165, 165);
+  font-weight: bolder;
+  font-size:50px;
+  width: 50px;
+  text-align: center;
+  padding-top: 5px;
+  height: 50px;
+  display: inline-block;
+}
 /* child container 3*/
 .container3{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
   /* background-color:pink;  */
   width:300px;
   /* height:230px; */
-  position: relative;
+  /* position: relative; */
   margin-bottom: 10px;
-  border-bottom: 3px;
-  /* border-color:grey; */
-  border-bottom-style: solid;
+  padding-top: 10px;
+  border-bottom:10px solid grey;
 }
 /* child container 3*/
 .cont-img3{
   width:130px;
-  height:90x;
+  height:130x;
   /* border: 3px solid black; */
 }
-/* .img3{
+ .leftimg3{
   width:130px;
-  height:90px;
+  height:130px;
+  border-radius: 6px;
 
-} */
+} 
 /* heading */
 .heading3{
   font-weight: bold;
-  position: absolute;
+  /* position: absolute;
   top:0px;
-  left:40%;
-  width:200px;
-  text-align: start
+  left:40%; */
+  text-align: start;
+  width:100px;
+  height: 50px;
 }
 /* description */
 .des3{
@@ -158,8 +189,9 @@
   width:300px;
 }
 .number2{
-  position:absolute;
-  left:20%;
+  /* position:absolute;
+  right:0px;
+  top:50%; */
   border:2px solid red;
   color: rgb(165, 165, 165);
   font-weight: bolder;
@@ -241,4 +273,10 @@
   color: black;
 }
 
+@media screen and (max-width:480){
+  .main-container{
+    flex-direction: column;
+    border:3px solid greenyellow;
+  }
 
+}
