--- a/src/component/Content.css
+++ b/src/component/Content.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:start;
+    justify-content:flex-start;
     width:500px;
     padding: 2px;
 }
@@ -119,7 +119,7 @@
 
     display: flex;
     align-items:center;
-    justify-content:start;
+    justify-content:flex-start;
     margin-top: 2px;
     padding: 4px;
 }
@@ -150,7 +150,9 @@
     left:35px;
     z-index: +2;
 }
-.likeshare{
+.likeshare:hover{
+    border: 1px solid grey;
+
 
 }
 
