--- a/src/component/LinkCompo.css
+++ b/src/component/LinkCompo.css
@@ -40,6 +40,7 @@
     .title:hover{
       color:rgb(238,174,202);
       border-radius: 5px;
+      border-radius: 4px;
     } 
     ul{
       display: flex;
@@ -81,11 +82,11 @@
       .nav .menu{
             display:flex;
             flex-direction: column;
-            align-items: start;
+            align-items:flex-start;
         }
         .nav{
             display:colomn;
-            align-items: start;
+            align-items: flex-start;
             flex-direction:column;
             width:100%;
             /* height:30vh; */
