--- a/src/component/Footer.css
+++ b/src/component/Footer.css
@@ -1,19 +1,26 @@
 .footer{
     background-color:whitesmoke;
     color:grey;
-    width:100%;
-    height:200px;
+    width:95vw;
     display: flex;
     justify-content:space-between;
     padding:10px;
-    box-shadow: inset;
+    box-shadow:2px solid black;
     /* position: fixed;
     bottom: 0px; */
   }
   .section{
-    width:300px;
+    width:400px;
     /* border: 5px solid red; */
     background-color:whitesmoke;
+  }
+  .section1{
+    width:500px;
+    /* border: 5px solid red; */
+    background-color:whitesmoke;
+  }
+  .section h3{
+    text-align: center;
   }
   .flink {
     display: flex;
@@ -35,7 +42,8 @@
   .soclink{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    align-items: center;
+    justify-content:center;
     margin-top:5px; 
   }
   .soclinks{
@@ -53,7 +61,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:space-evenly;
+    justify-content:space-between;
 
   }
   .phone{
@@ -62,16 +70,16 @@
     font-weight: bold;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
   }
   .email{
-    margin-top: 10px;
+    margin-top:5px;
     font-size: large;
     font-weight: bold;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content:space-evenly;
     align-items: center;
   }
   /* h3{
@@ -92,9 +100,9 @@
 
   }
   
-  /* @media screen and (max-width:480){
+   @media screen and (max-width:480){
     .footer{
       width:100%;
     }
-  } */
+  } 
   
