--- a/src/component/LinkCompo.css
+++ b/src/component/LinkCompo.css
@@ -3,6 +3,11 @@
     padding:0px;
     box-sizing: border-box;
   }
+  .main{
+    background-color: whitesmoke;
+      padding-left: 2%;
+      padding-right: 2%;
+    }
   .site-name{
     /* border: 3px solid red; */
     background-color:whitesmoke;
@@ -25,7 +30,7 @@
 /*///////////////////// navbar////////////////////////////////////////// */
     .nav{
        /* height:10vh; */
-       width:100vw;
+       /* width:100vw; */
        display: flex;
        align-items: center;
        justify-content: space-evenly;
@@ -99,6 +104,51 @@
             height:  100%;;
             margin-bottom: 0.25rem;
             text-align: center;
+          } 
+
+          
+          .nav ul.Open{
+            display: flex;
+          }
+        .nav ul li{
+          width:100%;
+          text-align: center;
+        }
+        .nav ul li a{
+          margin: 0.2rem 0.5rem
+        }
+        .site-name{
+          /* border: 3px solid red; */
+          background-color:whitesmoke;
+          display: flex;
+          align-items:flex-start;
+          justify-content:flex-start;
+          /* position: relative; */
+          height:10vh;
+        }
+    }   
+
+    @media (min-width:481px) and (max-width:768px){
+      .nav .menu{
+            display:flex;
+            flex-direction: column;
+            align-items:flex-start;
+        }
+        .nav{
+            display:colomn;
+            align-items: flex-start;
+            flex-direction:column;
+            width:100%;
+            /* height:30vh; */
+            margin-bottom: 0.2rem
+        }
+        .nav ul{
+          display: none;
+          flex-direction: column;
+            width: 100%;
+            height:  100%;;
+            margin-bottom: 0.25rem;
+            text-align: center;
           }
           .nav ul.Open{
             display: flex;
@@ -110,4 +160,13 @@
         .nav ul li a{
           margin: 0.2rem 0.5rem
         }
-    }
+        .site-name{
+          /* border: 3px solid red; */
+          background-color:whitesmoke;
+          display: flex;
+          align-items:center;
+          justify-content:flex-start;
+          /* position: relative; */
+          height:10vh;
+        }
+    }   
