--- a/src/component/Content.css
+++ b/src/component/Content.css
@@ -1,3 +1,8 @@
+ *{
+    margin:0px;
+    padding: 0px;
+    box-sizing:border-box;
+ }
  .dynamicData1{
     /* border: 10px solid blue; */
     display: flex;
@@ -33,6 +38,10 @@
     font-weight: bolder;
     font-style: italic;
 }
+.dhead{
+    width:100%;
+    margin:1%;
+}
 .user{
     /* border:1px solid black; */
     /* width:600px; */
@@ -52,8 +61,9 @@
     border-radius: 50%;
 }
 .userP{
-    /* border:3px solid red; */
-    width:500px;
+    /* border:3px solid red;  */
+    width:100%;
+    padding:2%;
     margin-top: 0.3rem;
     margin-bottom: 0.3rem;
     display: flex;
@@ -155,16 +165,319 @@
 
 
 }
+.back{
+    background-color: grey;
+    position: fixed;
+
+    color:black;
+    top:10%;
+    left:35px;
+
+}
+.back button Link{
+    text-decoration: none;
+}
 
 @media screen and (max-width:480px) {
+    .dynamicData1{
+        display: flex;
+        align-items: center;
+        justify-content:center;
+        /* width:100%; */
+    } 
+    .parentD1{
+        /* border: 4px solid green; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:flex-start;
+        width:100%;
+        padding: 2px;
+    }
+    .Dimgbox{
+        width:100%;
+        height:20%;
+        /* border:3px solid red; */
+        margin-top: 0.5rem;
+    } 
+    .Dimg{
+        width:97%;
+         height:100%;
+         border-radius:5%;
+         margin: 1%;
+       /* border: 5px solid black; */
+       
+    } 
+    .Ddesc1{
+        text-align: center;
+        width:70%;
+        height:30%;
+        padding-top:2px;
+        font-weight: bolder;
+        font-style: italic;
+    }
+    .Dhe
+    .user{
+        /* border:1px solid black; */
+        /* width:600px; */
+        height:50px;
+        display: flex;
+        align-items:center;
+        justify-content:center;
+       
+    }
+    
+    .userImg{
+    
+        /* background-color:gre bordy; */
+        margin-right: 0.5rem;
+        width:55px;
+        height: 55px;
+        border-radius: 50%;
+    }
+    .userP{
+        flex-direction: column;
+    }
+    .user{
+         /* border:1px solid black;  */
+        /* width:600px; */
+        height:50px;
+        display: flex;
+        align-items:center;
+        justify-content:center;
+       
+    }
+   .middle-child{
+         /* background-color: rebeccapurple;  */
+           display: flex;
+           align-items: center;
+           justify-content: center;
+           padding: 3%;
+           width:100%;
+           margin-bottom: 10px;
+       }
+
+       .middle-child{
+        background-color: whitesmoke;
+       }
     .dynamicData2{
-        /* border: 10px solid blue; */
+        /* border: 3px solid blue; */
+        width:100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content:space-between;
+        margin:0.5em;
         /* z-index:3; */
     } 
+    .Dimgbox2{
+        width:30%;
+        height:20%;
+        /* border:3px solid red; */
+    } 
+    .Dimg2{
+        width:97%;
+        height:100%;
+        border-radius: 10%;
+        padding:2px;
+        /* border: 5px solid black; */
+    } 
+    .parentD2{
+         /* border: 4px solid green;  */
+        /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:start */
+        margin-bottom: 2%;
+        width: 100%;
+
+    }
+    .Dimgbox2{
+        width:100%;
+        height:250px;
+        /* border:3px solid red; */
+    } 
+    .Dimg2{
+        width:100%;
+        height:100%;
+        border-radius: 10%;
+        padding:2px;
+        /* border: 5px solid black; */
+    } 
+    .Dhea2{
+        text-align: center;
+        width:100%;
+        padding-top:10px;
+        /* border:2px solid black; */
+    }
+    .user2{
+        /* border:1px solid black; */
+        width:200px;
+        height:50px;
+    
+        display: flex;
+        align-items:center;
+        justify-content:flex-start;
+        margin-top: 2px;
+        padding: 4px;
+    }
+    .dynamicData2{
+        /* border: 10px solid blue; */
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:space-between;
+    } 
+
+    
+}
+@media screen and (min-width:481px) and (max-width:768px) {
+    .dynamicData1{
+        display: flex;
+        align-items: center;
+        justify-content:center;
+        padding:0.5em;
+        /* width:100%; */
+    } 
+    .parentD1{
+        /* border: 4px solid green; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:flex-start;
+        width:100%;
+        padding: 2px;
+    }
+    .Dimgbox{
+        width:100%;
+        height:20%;
+        /* border:3px solid red; */
+        margin-top: 0.5rem;
+    } 
+    .Dimg{
+        margin: 1%;
+        width:97%;
+         height:100%;
+         border-radius:5%;
+       /* border: 5px solid black; */
+       
+    } 
+    .Ddesc1{
+        text-align: center;
+        width:70%;
+        height:30%;
+        padding-top:2px;
+        font-weight: bolder;
+        font-style: italic;
+    }
+    .Dhe
+    .user{
+        /* border:1px solid black; */
+        /* width:600px; */
+        height:50px;
+        display: flex;
+        align-items:center;
+        justify-content:center;
+       
+    }
+    
+    .userImg{
+    
+        /* background-color:gre bordy; */
+        margin-right: 0.5rem;
+        width:55px;
+        height: 55px;
+        border-radius: 50%;
+    }
+    .userP{
+        flex-direction: column;
+    }
+    .user{
+        /* width:600px; */
+        height:50px;
+        display: flex;
+        align-items:center;
+        justify-content:center;
+       
+    }
+   .middle-child{
+           display: flex;
+           align-items: center;
+           justify-content: center;
+           padding: 3%;
+           width:100%;
+           margin-bottom: 10px;
+       }
+
+       .middle-child{
+        background-color: whitesmoke;
+       }
+    .dynamicData2{
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:space-between;
+        margin:0.5em;
+        /* z-index:3; */
+    } 
+    .Dimgbox2{
+        width:100%;
+        height:20%;
+    } 
+    .Dimg2{
+        width:100%;
+        height:100%;
+        border-radius: 10%;
+        padding:2px;
+        /* border: 5px solid black; */
+    } 
+    .parentD2{
+        width: 100%;
+        margin-bottom: 2%;
+
+    }
+    /* .Dimgbox2{
+        width:100%;
+        height:250px;
+         border:3px solid red; 
+    } 
+    .Dimg2{
+        width:100%;
+        height:100%;
+        border-radius: 10%;
+        padding:2px;
+     border: 5px solid black; 
+    }  */
+    .Dhea2{
+        text-align: center;
+        width:100%;
+        padding-top:10px;
+        /* border:2px solid black; */
+    }
+    .user2{
+        /* border:1px solid black; */
+        width:200px;
+        height:50px;
+    
+        display: flex;
+        align-items:center;
+        justify-content:flex-start;
+        margin-top: 2px;
+        padding: 4px;
+    }
+    /* .dynamicData2{
+        border: 10px solid blue;
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content:space-between;
+        /* z-index:3; 
+    }  
+*/
+   
 
     
 }
