--- a/src/component/Content.css
+++ b/src/component/Content.css
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content:center;
 } 
-.parentD1{
+.parentD1{  
     /* border: 4px solid green; */
     display: flex;
     flex-direction: column;
@@ -166,12 +166,15 @@
 
 }
 .back{
-    background-color: grey;
-    position: fixed;
-
-    color:black;
+   
+    border-radius: 5px;
+    position: absolute;
+    margin:2%;
+    background-color: white;
+    border:2px solid grey;
+    color: black;
     top:10%;
-    left:35px;
+    left:30px;
 
 }
 .back button Link{
