--- a/src/index.css
+++ b/src/index.css
@@ -239,11 +239,13 @@ position:absolute;
 }
 .img2cont{
   /* border:4px solid red; */
-  height: 400px;
+  height: 398px;
   width:400px;
+  margin-top:2%;
+  border-radius: 3%;
 }
 .img1{
-  width:400px;
+  width:398px;
   height:400px;
   margin-right: 10px;
   border-radius: 3px;
@@ -268,6 +270,7 @@ position:absolute;
   /* border: 3px solid green; */
   align-items: center;
   justify-content: center;
+  padding:3%;
 }
 .HomeLatest{
   /* border:4px solid red; */
