--- a/src/component/Footer.css
+++ b/src/component/Footer.css
@@ -100,7 +100,6 @@
    @media screen and (max-width:480px){
     .footer{
       padding: 0px;
-      border:2px solid black;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -115,7 +114,7 @@
     }
     .section1{
       width:100%;
-       border:1px solid blue; 
+       /* border:1px solid blue;  */
       background-color:whitesmoke;
     }
     .aflink{
@@ -147,7 +146,6 @@
   @media screen and (min-width:481px) and (max-width:768px){
     .footer{
       padding: 0px;
-      border:2px solid black;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -162,7 +160,7 @@
     }
     .section1{
       width:300px;
-       border:1px solid blue; 
+       /* border:1px solid blue;  */
       background-color:whitesmoke;
     }
     .aflink{
