--- a/src/component/LinkCompo.css
+++ b/src/component/LinkCompo.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
   }
   .main{
+    overflow: hidden;
     background-color: whitesmoke;
       padding-left: 2%;
       padding-right: 2%;
