--- a/src/index.css
+++ b/src/index.css
@@ -4,20 +4,19 @@
   box-sizing:border-box;
 }
 /* main container */
-.main-container{
+ .main-container{
   display: flex;
- justify-content:space-around;
-/* border :3px solid red; */
-width:100%;
-}
+  justify-content:space-around;
+  /* border :5px solid black; */
+} 
  /*left parent  */
 .parent1{
-   /* border: 5px solid blue; */
+   /* border: 2px solid blue; */
 
 }
 /* right parent */
 .parent2{
-   /* border: 5px solid green;  */
+    /* border: 2px solid rgb(36, 227, 36);   */
 }
 
 /* main container */
@@ -30,7 +29,7 @@ width:100%;
   /* height:230px; */
   position: relative;
   margin-bottom: 10px;
-  padding:2%;
+  padding-top:3%;
   border-bottom: 1px solid rgb(201, 195, 195);border-radius: 2%;
 }
 /* child container 1*/
@@ -42,7 +41,7 @@ width:100%;
 .imgData{
   width:265px;
   height:165px;
-  border-radius: 5px;
+  border-radius: 5px;    
 
 }
 /* heading */
@@ -76,6 +75,11 @@ width:100%;
   width:100vw;
   background-color: #dadadd;
 } */
+.main-head{
+  width:300px;
+  height:30px;
+}
+
  .hr1{
   width:6vw;
   height:2px;
@@ -87,30 +91,30 @@ width:100%;
 /* img cont */
 /* Top lar */
 /* top post left img */
-.topleft{
+.topright{
   /* border:3 px solid red; */
 }
 /* child container 2 for big img*/
 .container2{
    /* border:4px solid  blue;  */
    background-color: whitesmoke;
-  width:300px;
-  height:250px;
+  width:320px;
+  /* height:250px; */
   position: relative;
   padding:2%;
   border-bottom: 1px solid rgb(201, 195, 195);border-radius: 2%;
-  /* margin-bottom: 10px; */
+  /* border:2px solid blueviolet; */
 }
 /* child container 2*/
- #heading2{
+.heading2{
   position:absolute;
   left:20px;
-  border:2px solid red;
+ /* border:2px solid   red; */
 } 
 .cont-img2{
   width:100%;
-  height:200px;
-  border: 3px solid black; 
+  height:180px;
+  /* border: 3px solid black;  */
    
 }
 .leftImg{
@@ -135,16 +139,18 @@ position:absolute;
   display: inline-block;
 }
 /* child container 3*/
+.rightbottom{
+  /* border:3px solid red; */
+}
 .container3{
   display: flex;
-  align-items: center;
+  align-items: center;   
   justify-content:space-between;
-  /* background-color:pink;  */
+  /* border: 2px solid  pink; */
   width:300px;
   /* height:230px; */
   /* position: relative; */
   margin-bottom: 10px;
-  padding: 2%;
   border-bottom: 1px solid rgb(201, 195, 195);border-radius: 2%;
 }
 /* child container 3*/
@@ -212,9 +218,8 @@ position:absolute;
   background-attachment:scroll;background-size:auto;
   }
 .number2{
-  /* position:absolute;
-  right:0px;
-  top:50%; */
+  /* position:absolute; */
+  /* border:2px solid red; */
   /* border:2px solid red; */
   color: rgb(165, 165, 165);
   font-weight: bolder;
@@ -330,64 +335,65 @@ position:absolute;
   flex-direction: row
 }
 /*media Query for mobile*/
-@media screen and  (max-width:480px){
+
+
+/* //////////////////////////// */
+/* for ipad and tablet */  
+@media screen and (max-width:480px){
   .main-container{
-    display: flex;
     flex-direction: column;
+    width:100%; 
+
   }
   .parent1{
-    width:100%;
-    /* border: 5px solid blue; */
+    width: 100%;
+    margin:0.5em;
+    overflow: hidden;
+
   }
+ /* child cont1 */
+ /* heading */
+
+ 
   .container1{
-    /* background-color:pink;  */
-    width:100%;
-     padding:5px;;
-    /* height:230px; */
-    /* position: relative; */
-    /* margin-bottom: 10px; */
+    width:97%;
+    /* border:1px solid red; */
   }
   .cont-img1{
-    width:30%;
-    height:100px;
+    width:40%;
+    height:60%;
     border-radius:3px;
-    padding-right: 3px;
-    /* border: 3px solid black; */
+     /* border: 3px solid black;  */
   }
   .imgData{
     width:100%;
-    height:100px;
-    border-radius:3px;
+    /* height:100%; */
+    border-radius:4%;
   }
   /* heading///// */
   .heading1{
     font-weight:bold;
     position:absolute;
     font-size:0.7em;
-    top:5px;
-    left:30%;
-    width:70%;;
+    top:6%;
+    left:43%;
+    width:50%;
     text-align:start;
-    /* border:2px solid green; */
+    /* border:1px solid green;  */
   }
   .des1{
-    width:70%;
-    font-size:0.5em;
-    /* height:70px; */
+    width:50%;
+    font-size:0.7em;
     /* background-color: red; */
-     position: absolute; 
-    /* bottom:50%; */
-   
-    left:30%;
-    top:30%;
-    font-size:small;
+    position: absolute; 
+    left:43%;
+    top:35%;
   }
   .date1{
     position: relative;
-    left:35%;
-    bottom:10px;
+    left:43%;
+    bottom:22px;
     font-size:0.5em;
-    font-weight: bolder;
   }
   .Add{
     display: none;
@@ -396,42 +402,62 @@ position:absolute;
 
   /* parent2 */
   .parent2{
-    width:100%
+    width:100%;
+    margin:0.5em;
+    overflow: hidden;
+
  }
   .container2{
-    /* border:1px solid  blue;  */
-    padding: 0.5em;
-    width:100%;
-    height:255px;
+     /* border:4px solid  pink;  */
+     /* width:300px; */
+    width:97%;
+    
+    height:30%;
+    padding:1em;
+    position: relative;
+    margin-bottom: 10px;
   }
   /* child container 2*/
-   #heading2{
+   .heading2{
     position:absolute;
-    left:20px;
-    font-size: 20px;
+    left:2%;
+    bottom:2%;
+    font-size:1em;
     /* border:2px solid red; */
   } 
   .cont-img2{
-    width:100%;
-    height:200px;
-    margin-bottom:3px;
-    /* border: 3px solid black;  */
+    width:80%;
+    height:80%;
+     /* border: 3px solid black;   */
      
   }
   .leftImg{
     width:100%;
-    height:200px;
+    height:100%;
     /* border: 3px solid red; */
     border-radius:5px;
   
   }
   .number1{
   position:absolute;
+  /* border:2px solid red; */
     right:0px;
     bottom: 4px;
     /* border:2px solid red; */
+    color: #a5a5a5;
+    font-weight:lighter;
+    font-size:30px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding-top: 2px;
+   display: inline-block;
+  }
+
+  .number2{
+    /* border:2px solid red; */
     color: rgb(165, 165, 165);
-    font-weight: bolder;
+    font-weight:lighter;
     font-size:30px;
     width: 30px;
     text-align: center;
@@ -442,33 +468,19 @@ position:absolute;
   .container3{
     display: flex;
     align-items: center;
-    /* background-color:red;   */
-    width:100%;
+    /* width:300px; */
+    width:97%;
+    margin-bottom: 10px;
+    border-bottom:2px solid rgb(219, 214, 214)
   }
-
   /* child container 3*/
-  .number2{
-    /* position:absolute;
-    right:0px;
-    top:50%; */
-    /* border:2px solid red; */
-    color: rgb(165, 165, 165);
-    font-weight: bolder;
-    font-size:30px;
-    width: 30px;
-    text-align: center;
-    padding-top: 5px;
-    height: 30px;
-    display: inline-block;
-  }
   .cont-img3{
-    width:30%;
-    height:30%
+    width:50%;
+    height:20%;
     /* border: 3px solid black; */
   }
    .leftimg3{
     width:100%;
-    height: 100%;
     border-radius: 6px;
   
   } 
@@ -478,14 +490,15 @@ position:absolute;
     /* position: absolute;
     top:0px;
     left:40%; */
-    text-align:start;
-    width:50%;
-    font-size: 0.7em;
-    /* border: 2px solid black; */
+    /* border: 1px solid red;  */
+    font-size: 0.9em;
+    text-align:center;
+    width:30%;
+    height:20%;
   }
   /* description */
   .des3{
-    width:200px;
+    width:300px;
     /* height:70px; */
     /* background-color: red; */
      position: absolute; 
@@ -499,95 +512,96 @@ position:absolute;
     left: 40%;
     bottom:30px;
   }
-
-    /* home  */
-    .frontimg{
-      /* border: 5px solid black;   */
-      width:100%;;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-    .HomeImg{
-      display: flex;
-      flex-direction: column;
-      width:100%;
-      /* border: 3px solid green; */
-      align-items: center;
-      justify-content: center;
-    }
-    .img1{
-      width:100%;
-      height:400px;
-      /* margin-right: 10px; */
-      border-radius: 3px;
-    }
-    .img2cont{
-      width:100%;
-  
-    }
-   
-    .img2{
-      width:100%;
-      height:196px;;
-      margin-bottom:5px;
-      border-radius: 3px;
-    } 
-    .img3{
-      width:100%;
-      height:196px;
-      border-radius:3px;
-    }
-
-
-
-    /* latesrt */
-    .latestP{
-      flex-direction: column;
-      padding-top: 2%;
-     
-    }
-    .latestP1{
-      /* border: 5px solid blue; */
-     width:100%;
-     margin-top: 2%;
-    
+   /* home  */
+   .home-container{
+    overflow: hidden;
+    padding:3%;
    }
-   .latestimg{
-     width:100%;
-     height:50%;
-   }
-
-
-  /* latest article */
-  .lArticle{
-    /* border: 3px solid black;  */
+   .frontimg{
+    /* border: 5px solid black;   */
+    width:100%;;
     display: flex;
-    justify-content:space-around;
-    margin-top:10%;
+    align-items: center;
+    justify-content: center;
+  }
+  .HomeImg{
+    display: flex;
     flex-direction: column;
+    width:100%;
+    /* border: 3px solid green; */
+    align-items: center;
+    justify-content: center;
+  }
+  .img1{
+    width:100%;
+    height:400px;
+    /* margin-right: 10px; */
+    border-radius: 3px;
+  }
+  .img2cont{
+    width:100%;
+
+  }
  
- 
+  .img2{
+    width:100%;
+    height:196px;;
+    margin-bottom:5px;
+    border-radius: 3px;
+  } 
+  .img3{
+    width:100%;
+    height:196px;
+    border-radius:3px;
+  }
+
+
+
+  /* latesrt */
+  .latestP{
+    flex-direction: column;
+    padding-top: 2%;
+   
+  }
+  .latestP1{
+    /* border: 5px solid blue; */
+   width:100%;
+   margin-top: 2%;
+  
  }
+ .latestimg{
+   width:100%;
+   height:50%;
+ }
+
+
+/* latest article */
+.lArticle{
+  /* border: 3px solid black;  */
+  display: flex;
+  justify-content:space-around;
+  margin-top:10%;
+  flex-direction: column;
+
 
 }
 
-/* //////////////////////////// */
-/* for ipad and tablet */  
+
+}
+
 @media screen and (min-width:481px) and (max-width:768px){
     .main-container{
       display: flex;
-       width:100%; 
       flex-direction: column;
       align-items:center;
       /* justify-content:space-around; */
       flex-wrap: wrap; 
+      overflow: hidden;
       /* margin-top: 10px; */
       /* border :4px solid red;  */
     }
     .parent1{
-      width:100%;
-      
+
     }
     .container1{
       /* background-color:pink;  */
@@ -746,6 +760,9 @@ position:absolute;
       align-items: center;
       justify-content: center;
     }
+    .home-container{
+      overflow: hidden;
+      padding:3%;
     .HomeImg{
       display: flex;
       flex-direction: column;
@@ -776,6 +793,8 @@ position:absolute;
       height:196px;
       border-radius:3px;
     }
+
+  }
 
 
 
