--- a/src/component/Content.css
+++ b/src/component/Content.css
@@ -442,7 +442,7 @@ color:white;
     .dynamicData2{
         width:100%;
         display: flex;
-        flex-direction:row;
+        flex-direction:column;
         /* align-items: center; */
         justify-content:space-between;
     }
@@ -568,7 +568,7 @@ color:white;
     .dynamicData2{
         width:100%;
         display: flex;
-        flex-direction:row;
+        flex-direction:column;
         /* align-items: center; */
         justify-content:space-between;
     }
