--- a/src/component/Content.css
+++ b/src/component/Content.css
@@ -106,7 +106,7 @@
      display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:start 
+    justify-content:center;
 }
 .Dimgbox2{
     width: 320px;
