--- a/src/index.css
+++ b/src/index.css
@@ -236,35 +236,36 @@ position:absolute;
   /* border:5px solid greenyellow; */
 }
 .frontimg{
-  /* border: 5px solid black;   */
+  /* border: 5px solid green; */
   margin-top: 2%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .img2cont{
-  /* border:4px solid red; */
+ /* border:4px solid red; */
   height: 398px;
   width:400px;
   margin-top:2%;
   border-radius: 3%;
 }
 .img1{
-  width:398px;
+  width:550px;
   height:400px;
   margin-right: 10px;
   border-radius: 3px;
   border-radius: 2%;
-}
+  /* border:2px solid red;*/
+} 
 .img2{
-  width:200px;
+  width:280px;
   height:196px;;
   margin-bottom:5px;
   border-radius: 3px;
   border-radius: 2%;
 } 
 .img3{
-  width:200px;
+  width:280px;
   height:196px;
   border-radius:3px;
   border-radius: 2%;
